CLARIO-2581 - Simple Workflow Project ---- - Refactor swift naming and event slection